@@ -32,3 +32,11 @@
 	build under OpenSuSE 11.1.
 2009-12-23 Fred Gleason <fredg@paravelsystems.com>
 	* Incremented the package version to 0.3.3.
+2014-08-19 Fred Gleason <fredg@paravelsystems.com>
+	* Renamed 'configure.in' to 'configure.ac'.
+	* Modernized the invocations of AM_INIT() and AC_INIT()
+	in 'configure.ac'.
+	* Amalgamated $INCLUDES into $AM_CPPFLAGS in 'Makefile.am'.
+	* Modified includes to be compliant with TagLib v1.8.
+	* Cleaned up warnings in 'cgilib.cpp', 'cgilib.h', 'conflib.cpp',
+	and 'conflib.h'.
